add > login api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,6 @@ spring:
   resources:
     add-mappings: false
 
-
 swagger:
   enabled: true
   title: oms-API
@@ -16,6 +15,8 @@ swagger:
   exclude-path: /error
   version: 1.9
 
+server:
+  port: 8080
 ---
 spring:
   profiles: dev
